<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.GameMenuActivity">

    <ImageView
        android:id="@+id/iv_game_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/text_desc_game_background"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_game" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_alpha_85" />

    <ImageView
        android:id="@+id/iv_game_logo"
        android:layout_width="@dimen/_125sdp"
        android:layout_height="@dimen/_125sdp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        tools:src="@drawable/ic_logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:backgroundTint="@color/colorPrimaryVariant"
        app:cardCornerRadius="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_game_logo"
        app:layout_constraintVertical_bias="0.1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp">

            <TextView
                style="@style/Text.Game.App.16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_16sdp"
                android:paddingBottom="@dimen/_16sdp"
                android:text="@string/text_placeholder_main_menu"
                android:textAlignment="center"
                android:textSize="@dimen/_16ssp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_versus_player"
                style="@style/Text.Game.App.14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_corners_brown"
                android:backgroundTint="@color/red_300"
                android:maxLines="1"
                android:text="@string/text_placeholder_player_vs_player" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_versus_computer"
                style="@style/Text.Game.App.14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/bg_corners_brown"
                android:backgroundTint="@color/red_300"
                android:maxLines="1"
                android:text="@string/text_placeholder_player_vs_computer" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_options"
                style="@style/Text.Game.App.14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/bg_corners_brown"
                android:backgroundTint="@color/red_300"
                android:maxLines="1"
                android:text="@string/text_placeholder_options" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_exit_game"
                style="@style/Text.Game.App.14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:background="@drawable/bg_corners_brown"
                android:backgroundTint="@color/red_300"
                android:maxLines="1"
                android:text="@string/text_placeholder_exit_game" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>