<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_100"
    tools:context=".ui.game.GameActivity">

    <ImageView
        android:id="@+id/iv_game_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/text_desc_game_background"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_game" />

    <TextView
        android:id="@+id/tv_running_text"
        style="@style/Text.Game.App"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_300"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:paddingTop="@dimen/_6sdp"
        android:paddingBottom="@dimen/_6sdp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/text_placeholder_running"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:backgroundTint="@color/colorPrimaryVariant"
        app:cardCornerRadius="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@+id/tv_placeholder_versus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_running_text"
        app:layout_constraintVertical_bias="0.1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp">

            <TextView
                android:id="@+id/tv_score_player_one"
                style="@style/Text.Game.App"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_corners_brown"
                android:backgroundTint="@color/red_300"
                android:maxLines="1"
                android:text="@string/text_placeholder_score_default"
                android:textAlignment="center"
                android:textSize="@dimen/_34ssp" />

            <TextView
                android:id="@+id/tv_score"
                style="@style/Text.Game.App"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:padding="@dimen/_8sdp"
                android:text="@string/text_placeholder_score"
                android:textAlignment="center"
                android:textSize="@dimen/_24ssp" />

            <TextView
                android:id="@+id/tv_score_player_two"
                style="@style/Text.Game.App"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_corners_brown"
                android:backgroundTint="@color/red_300"
                android:maxLines="1"
                android:text="@string/text_placeholder_score_default"
                android:textAlignment="center"
                android:textSize="@dimen/_34ssp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/ll_action_left"
        android:layout_width="@dimen/_75sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_name_player_left"
            style="@style/Text.Game.App"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/bg_corners_brown"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="@dimen/_8sdp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textAlignment="center"
            android:textSize="@dimen/_14ssp"
            tools:text="@string/text_placeholder_name_player_one" />

        <ImageView
            android:id="@+id/iv_rock_left"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:contentDescription="@string/text_rock"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_rock_32dp" />

        <ImageView
            android:id="@+id/iv_paper_left"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:contentDescription="@string/text_paper"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_paper_32dp" />

        <ImageView
            android:id="@+id/iv_scissors_left"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:contentDescription="@string/text_scissors"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_scissors_32dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_placeholder_versus"
        style="@style/Text.Game.App"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_corners_brown"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:text="@string/text_placeholder_versus"
        android:textSize="@dimen/_40ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_game_background" />

    <LinearLayout
        android:id="@+id/ll_action_right"
        android:layout_width="@dimen/_75sdp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_name_player_right"
            style="@style/Text.Game.App"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/bg_corners_brown"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="@dimen/_8sdp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textAlignment="center"
            android:textSize="@dimen/_14ssp"
            tools:text="@string/text_placeholder_name_player_two" />

        <ImageView
            android:id="@+id/iv_rock_right"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:contentDescription="@string/text_rock"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_rock_32dp" />

        <ImageView
            android:id="@+id/iv_paper_right"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:contentDescription="@string/text_paper"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_paper_32dp" />

        <ImageView
            android:id="@+id/iv_scissors_right"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:contentDescription="@string/text_scissors"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_scissors_32dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_reset_btn"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/bg_corners_brown"
        android:contentDescription="@string/text_scissors"
        android:padding="@dimen/_8sdp"
        android:src="@drawable/ic_reset_32dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_exit_btn"
        app:layout_constraintEnd_toStartOf="@id/iv_exit_btn"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_exit_btn" />

    <ImageView
        android:id="@+id/iv_exit_btn"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/bg_corners_brown"
        android:contentDescription="@string/text_scissors"
        android:padding="@dimen/_8sdp"
        android:src="@drawable/ic_exit_32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>