<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_corners_brown"
    android:backgroundTint="@color/orange_100"
    android:padding="@dimen/_8sdp">

    <TextView
        android:id="@+id/tv_title_dialog"
        style="@style/Text.Game.App"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:paddingTop="@dimen/_8sdp"
        android:text="@string/text_title_before_starting"
        android:textColor="@color/brown_500"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_desc_dialog"
        style="@style/Text.Game.App"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:paddingTop="@dimen/_8sdp"
        android:text="@string/text_desc_before_starting"
        android:textColor="@color/red_700"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toTopOf="@id/btn_action_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_dialog" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name_player_one"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        app:errorEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name_player_one"
            style="@style/Text.Game.App"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_name_player_one"
            android:inputType="textCapWords"
            android:textColor="@color/red_700" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name_player_two"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:errorEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/btn_action_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_name_player_one">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name_player_two"
            style="@style/Text.Game.App"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_name_player_two"
            android:inputType="textCapWords"
            android:textColor="@color/red_700" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_action_cancel"
        style="@style/Text.Game.App.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/bg_corners_brown"
        android:backgroundTint="@color/colorPrimary"
        android:padding="@dimen/_8sdp"
        android:text="@string/text_placeholder_cancel"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintEnd_toStartOf="@id/btn_action_okay"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_action_okay"
        style="@style/Text.Game.App.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/bg_corners_brown"
        android:backgroundTint="@color/red_700"
        android:padding="@dimen/_8sdp"
        android:text="@string/text_placeholder_okay"
        app:layout_constraintBottom_toBottomOf="@+id/btn_action_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_action_cancel"
        app:layout_constraintTop_toTopOf="@+id/btn_action_cancel" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/name_player_one_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="til_name_player_one" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_notification_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="tv_title_dialog, tv_desc_dialog"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_options_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="til_name_player_one, til_name_player_two" />
</androidx.constraintlayout.widget.ConstraintLayout>