<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.intro.LandingPageFragment">

    <ImageView
        android:id="@+id/iv_landing_page_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/text_desc_game_background"
        android:scaleType="centerCrop"
        tools:src="@drawable/bg_landing_page_1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_alpha_85" />

    <ImageView
        android:id="@+id/iv_landing_page_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/bg_corners_brown"
        android:contentDescription="@string/text_desc_game_background"
        android:padding="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:src="@drawable/ic_landing_page_3_32dp" />

    <TextView
        android:id="@+id/tv_landing_page_title"
        style="@style/Text.Game.App"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:padding="@dimen/_8sdp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_landing_page_icon"
        app:layout_constraintVertical_bias="0.1"
        tools:text="@string/text_title_landing_page_3" />

    <TextView
        android:id="@+id/tv_landing_page_desc"
        style="@style/Text.Game.App.14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:padding="@dimen/_8sdp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/grey_300"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_landing_page_title"
        tools:text="@string/text_desc_landing_page_2"
        tools:visibility="gone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name_player_one"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:visibility="gone"
        app:boxBackgroundColor="@color/orange_100"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_landing_page_title"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name_player_one"
            style="@style/Text.Game.App"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_name"
            android:inputType="textCapWords"
            android:textColor="@color/red_700" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>